# CurrencyRate

./: main.py  pyproject.toml
